Add new/updated files

--- a/articles/templates/articles/about.html
+++ b/articles/templates/articles/about.html
@@ -9,7 +9,9 @@
     <meta name="title" content="عن عرب بيديا - ArabPedia">
     <meta name="description" content="تعرف على رؤية وأهداف موسوعة عرب بيديا الشاملة">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://d.top4top.io/p_35134u9lv1.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://f.top4top.io/p_35182640v1.png">
+<link rel="apple-touch-icon" href="https://f.top4top.io/p_35182640v1.png">
+<link rel="manifest" href="/site.webmanifest">
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="https://d.top4top.io/p_35134u9lv1.png">
 
