--- a/articles/templates/articles/country_privacy_policy.html
+++ b/articles/templates/articles/country_privacy_policy.html
@@ -9,9 +9,10 @@
     <meta name="title" content="سياسة الخصوصية - {{ country.name }} - عرب بيديا">
     <meta name="description" content="سياسة الخصوصية لموقع {{ country.name }} - كيف نحمي بياناتك الشخصية">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://d.top4top.io/p_35134u9lv1.png">
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="https://d.top4top.io/p_35134u9lv1.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://f.top4top.io/p_35182640v1.png">
+<link rel="apple-touch-icon" href="https://f.top4top.io/p_35182640v1.png">
+<link rel="manifest" href="/site.webmanifest">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
