country_contact.html

--- a/articles/templates/articles/country_contact.html
+++ b/articles/templates/articles/country_contact.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8168804660279955"
+     crossorigin="anonymous"></script>
     <!-- Basic Setup -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
